--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,11 +1,61 @@
 .vertical {
     display: flex;
     flex-direction: column;
-    border-box: black;
 }
 
 .horizontal {
     display: flex;
     flex-direction: row;
     justify-content: center;
+}
+
+#um {
+    float: left;
+    width: 100%;
+    height: 400px;
+    shape-outside: inset(20px 5px 30px 10px);
+    background:  #E8E8E8;
+    margin-top: 100px;
+
+}
+
+h2{
+    margin-top: 180px;
+text-align: center;
+}
+
+
+
+.dadosum {
+    background: #E8E8E8;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    display: flex;
+    text-align: center;
+}
+
+.porcentagem {
+    display: flex;
+    align-items: center;
+}
+
+h3 .porcentagem {
+    text-align:
+}
+
+.quatro {
+    display: flex;
+    justify-content: center;
+
+}
+
+#banner {
+    float: left;
+    width: 95%;
+    height: 400px;
+    shape-outside: inset(20px 5px 30px 10px);
+    background:  #E8E8E8;
+    margin-top: 100px;
+
 }
