--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -1,44 +1,37 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-        margin: 0;
+  margin: 0;
 }
 
 .footer {
+  background-color: #e8e8e8;
+  color: black;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: baseline;
+  gap: 30px;
+  padding: 0 1rem;
+  flex-wrap: wrap;
+}
 
-    background-color: #E8E8E8;
-    color: black;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: baseline;
-    gap:30px;
-    padding: 0 1rem;
-    flex-wrap: wrap;
-    
-    }
-    
-    .footer ul {
-    display: flex;
-    flex-direction: column;
-    padding: 0;
-    margin: 0; 
-    list-style: none;
-    display: flex;
-    gap: 1rem;
-    }
+.footer ul {
+  display: flex;
+  flex-direction: column;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  gap: 1rem;
+}
 
+.copy {
+  display: flex;
+  flex-direction: column;
+}
 
-    .copy {
-        display: flex;
-        flex-direction: column;
-
-    }
-    
-    
-    .footer a{
-        color: inherit;
-    }
-    
-    
+.footer a {
+  color: inherit;
+}
