--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,26 +1,22 @@
-
-
 .nav {
-background-color: #E8E8E8;
-color: black;
-display: flex;
-justify-content: space-between;
-align-items: center;
-gap: 2rem;
-padding: 0 1rem;
-height: 90px;
+  background-color: #e8e8e8;
+  color: black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2rem;
+  padding: 0 1rem;
+  height: 90px;
 }
 
 .nav ul {
-padding: 0;
-margin: 0; 
-list-style: none;
-display: flex;
-gap: 1rem;
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  gap: 1rem;
 }
 
-
-.nav a{
-    color: inherit;
+.nav a {
+  color: inherit;
 }
-
