--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -1,61 +1,66 @@
 .vertical {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .horizontal {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 #um {
-    float: left;
-    width: 100%;
-    height: 400px;
-    shape-outside: inset(20px 5px 30px 10px);
-    background:  #E8E8E8;
-    margin-top: 100px;
-
+  float: left;
+  width: 100%;
+  height: 400px;
+  shape-outside: inset(20px 5px 30px 10px);
+  background: #e8e8e8;
+  margin-top: 100px;
 }
 
-h2{
-    margin-top: 180px;
-text-align: center;
+h2 {
+  margin-top: 180px;
+  text-align: center;
 }
-
-
 
 .dadosum {
-    background: #E8E8E8;
-    border-radius: 50%;
-    width: 100px;
-    height: 100px;
-    display: flex;
-    text-align: center;
+  background: #e8e8e8;
+  border-radius: 50%;
+  display: flex;
+  text-align: center;
+  padding-inline: 10px 10px;
+  margin: 10px;
+  padding: 20px;
+  height: 100px;
+  width: 100px;
+  font-weight: bold;
+  font-size: 45px;
 }
 
 .porcentagem {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
+  position: relative;
+  margin-top: 50%;
+  text-align: center;
+  text-size-adjust: 20%;
+  font-size: 35px;
 }
 
 h3 .porcentagem {
-    text-align:
+  text-align: ;
 }
 
 .quatro {
-    display: flex;
-    justify-content: center;
-
+  display: flex;
+  justify-content: center;
 }
 
 #banner {
-    float: left;
-    width: 95%;
-    height: 400px;
-    shape-outside: inset(20px 5px 30px 10px);
-    background:  #E8E8E8;
-    margin-top: 100px;
-
+  float: left;
+  width: 95%;
+  height: 400px;
+  shape-outside: inset(20px 5px 30px 10px);
+  background: #e8e8e8;
+  margin-top: 100px;
 }
