--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -57,10 +57,14 @@ h3 .porcentagem {
 }
 
 #banner {
-  float: left;
   width: 95%;
   height: 400px;
   shape-outside: inset(20px 5px 30px 10px);
   background: #e8e8e8;
-  margin-top: 100px;
+  margin: 50px auto;
+}
+
+.assineaqui {
+  display: flex;
+  align-items: center;
 }
