--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,6 +1,6 @@
 .nav {
-  background-color: #e8e8e8;
-  color: black;
+  background-color: #ab0e38;
+  color: white;
   display: flex;
   justify-content: space-between;
   align-items: center;
