--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -7,11 +7,11 @@ body {
 }
 
 .footer {
-  background-color: #e8e8e8;
+  background-color: #5a93ab;
   color: black;
   display: flex;
   justify-content: space-evenly;
-  align-items: baseline;
+  align-items: center;
   gap: 30px;
   padding: 0 1rem;
   flex-wrap: wrap;
